Changes in @NEW@:
  o New Features:
    * Conary can now be configured with a set of certificate authorities
      (trustedCerts) against which all secure repository access will be
      validated. (CNY-2735)
    * Conary now logs the starting, output, and error exit codes of
      trove scripts to the /var/log/conary file. (CNY-3150)

  o Bug Fixes:
    * An internal function used to install files no longer leaks a file
      descriptor on error. (CNY-3152)
    * Unknown errors while retrieving PGP keys for archive verification
      are gracefully handled. (CNY-3120)
    * cvc refresh now ignores negative cache entries. (CNY-3157)
    * cvc sign properly handles keys specified by key ID, in addition
      to fingerprints. (CNY-3139)
    * conary updateall --items now honors --labels, --full-versions and
      --flavors flags. (CNY-3138)

  o Internal Changes:
    * Update handling now looks for preerase trove scripts in the local
      database instead of instantiating full troves from the database and
      looking in those troves.
    * Dependency tables for removed troves are no longer dropped and rebuilt
      during each iteration of dependency solving; they are now incrementally
      built during subsequent iterations.
    * Dependency ordering code now looks in the local database for trove
      references instead of instantiating troves to get that information
    * Code which decides what referenced troves need to be erased when
      collections are erased now:
        - Looks in the local database for trove references instead of
          instantiating troves to get that information
        - Batches reference checks, pin checks, and presence checks across
          troves instead of checking those for each trove individually
    * Fast pathed code which matches old troves with new troves for the
      case where only a single old trove and a single new trove with
      a given name exist

  o Bug Fixes: